dist/0003-loadbalancer.k8s.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nextcloud
  name: nextcloud-service
spec:
  externalIPs: []
  ports:
    - port: 80
  selector: {}
  type: LoadBalancer
