dist/0003-mysql.k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nextcloud
  name: mysql-mysql-deployment-c8db38e1
spec:
  minReadySeconds: 0
  progressDeadlineSeconds: 600
  replicas: 1
  selector:
    matchLabels:
      cdk8s.io/metadata.addr: mysql-mysql-deployment-c8cbbddd
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        cdk8s.io/metadata.addr: mysql-mysql-deployment-c8cbbddd
    spec:
      automountServiceAccountToken: true
      containers:
        - env:
            - name: MYSQL_ROOT_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: VerySecureSecretKey123
                  name: mysqlpassword
                  optional: true
          image: mysql
          imagePullPolicy: Always
          name: mysql-container
          securityContext:
            privileged: false
            readOnlyRootFilesystem: false
            runAsNonRoot: false
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: mysql-persistent-storage
              subPath: server-data
      dnsPolicy: ClusterFirst
      securityContext:
        fsGroupChangePolicy: Always
        runAsNonRoot: false
      setHostnameAsFQDN: false
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: shared-pvc
            readOnly: false
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nextcloud
  name: mysql-service
spec:
  externalIPs: []
  ports:
    - port: 3306
  selector:
    cdk8s.io/metadata.addr: mysql-mysql-deployment-c8cbbddd
  type: ClusterIP
