dist/0004-nextcloud.k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nextcloud
  name: nextcloud-nextcloud-deployment-c83f5017
spec:
  minReadySeconds: 0
  progressDeadlineSeconds: 600
  replicas: 1
  selector:
    matchLabels:
      cdk8s.io/metadata.addr: nextcloud-nextcloud-deployment-c8933217
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        cdk8s.io/metadata.addr: nextcloud-nextcloud-deployment-c8933217
    spec:
      automountServiceAccountToken: true
      containers:
        - image: nextcloud:16-apache
          imagePullPolicy: Always
          name: nextcloud-container
          securityContext:
            privileged: false
            readOnlyRootFilesystem: false
            runAsNonRoot: false
          volumeMounts:
            - mountPath: /var/www/html
              name: nextcloud-persistent-storage
              subPath: server-data
      dnsPolicy: ClusterFirst
      securityContext:
        fsGroupChangePolicy: Always
        runAsNonRoot: false
      # setHostnameAsFQDN:  false
      volumes:
        - name: nextcloud-persistent-storage
          persistentVolumeClaim:
            claimName: shared-pvc
            readOnly: false
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nextcloud
  name: nextcloud-service
spec:
  externalIPs: []
  ports:
    - port: 80
  selector:
    cdk8s.io/metadata.addr: nextcloud-nextcloud-deployment-c8933217
  type: ClusterIP
